--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -29,6 +29,7 @@
 \usepackage{multicol}
 \usepackage{href-ul}
 \usepackage{ffcode}
+\usepackage{soul}
 \begin{document}
 
 \newcommand\head[2]{#1: & #2 \\}
@@ -171,30 +172,30 @@
 \section{Литература}
 
 \begin{multicols}{2}\small\raggedright
-Len Bass et al., \emph{Software Architecture in Practice}\\[3pt]
-Paul Clements et al., \emph{Documenting Software Architectures: Views and Beyond}\\[3pt]
-\nospell{Karl Wiegers} et al., \emph{Software Requirements}\\[3pt]
-{\nospell{Alistair Cockburn}}, \emph{Writing Effective Use Cases}\\[3pt]
-{\nospell{Steve McConnell}}, \emph{Software Estimation: Demystifying the Black Art}\\[3pt]
-{Robert Martin}, \emph{Clean Architecture: A Craftsman's Guide to Software Structure and Design}\\[3pt]
-{Steve McConnell}, \emph{Code Complete}\\[3pt]
-{Frederick Brooks Jr.}, \emph{Mythical Man-Month, The: Essays on Software Engineering}\\[3pt]
-{David Thomas et al.}, \emph{The Pragmatic Programmer: Your Journey To Mastery}\\[3pt]
-{Robert C. Martin}, \emph{Clean Code: A Handbook of Agile Software Craftsmanship}\\[3pt]
-{\nospell{Grady Booch} et al.}, \emph{Object-Oriented Analysis and Design with Applications}\\[3pt]
-{\nospell{Bjarne Stroustrup}}, \emph{Programming: Principles and Practice Using C++}\\[3pt]
-{\nospell{Brett McLaughlin} et al.}, \emph{Head First Object-Oriented Analysis and Design: A Brain Friendly Guide to OOA\&D}\\[3pt]
-{David West}, \emph{Object Thinking}\\[3pt]
-{Eric Evans}, \emph{Domain-Driven Design: Tackling Complexity in the Heart of Software}\\[3pt]
-{Yegor Bugayenko}, \emph{Code Ahead}\\[3pt]
-{Yegor Bugayenko}, \emph{Elegant Objects}\\[3pt]
-{Michael Feathers}, \emph{Working Effectively with Legacy Code}\\[3pt]
-{Martin Fowler}, \emph{Refactoring: Improving the Design of Existing Code}\\[3pt]
-{Erich Gamma et al.}, \emph{Design Patterns: Elements of Reusable Object-Oriented Software}\\[3pt]
-{Martin Fowler}, \emph{UML Distilled}\\[3pt]
-{\nospell{Anneke Kleppe} et al.}, \emph{MDA Explained: The Model Driven Architecture: Practice and Promise}\\[3pt]
-{\nospell{Jez Humble} et al.}, \emph{Continuous Delivery: Reliable Software Releases through Build, Test, and Deployment Automation}\\[3pt]
-{\nospell{Michael T. Nygard}}, \emph{Release It!: Design and Deploy Production-Ready Software}\\[3pt]
+Len Bass et al., \ul{Software Architecture in Practice}\\[3pt]
+Paul Clements et al., \ul{Documenting Software Architectures: Views and Beyond}\\[3pt]
+\nospell{Karl Wiegers} et al., \ul{Software Requirements}\\[3pt]
+{\nospell{Alistair Cockburn}}, \ul{Writing Effective Use Cases}\\[3pt]
+{\nospell{Steve McConnell}}, \ul{Software Estimation: Demystifying the Black Art}\\[3pt]
+{Robert Martin}, \ul{Clean Architecture: A Craftsman's Guide to Software Structure and Design}\\[3pt]
+{Steve McConnell}, \ul{Code Complete}\\[3pt]
+{Frederick Brooks Jr.}, \ul{Mythical Man-Month, The: Essays on Software Engineering}\\[3pt]
+{David Thomas et al.}, \ul{The Pragmatic Programmer: Your Journey To Mastery}\\[3pt]
+{Robert C. Martin}, \ul{Clean Code: A Handbook of Agile Software Craftsmanship}\\[3pt]
+{\nospell{Grady Booch} et al.}, \ul{Object-Oriented Analysis and Design with Applications}\\[3pt]
+{\nospell{Bjarne Stroustrup}}, \ul{Programming: Principles and Practice Using C++}\\[3pt]
+{\nospell{Brett McLaughlin} et al.}, \ul{Head First Object-Oriented Analysis and Design: A Brain Friendly Guide to OOA\&D}\\[3pt]
+{David West}, \ul{Object Thinking}\\[3pt]
+{Eric Evans}, \ul{Domain-Driven Design: Tackling Complexity in the Heart of Software}\\[3pt]
+{Yegor Bugayenko}, \ul{Code Ahead}\\[3pt]
+{Yegor Bugayenko}, \ul{Elegant Objects}\\[3pt]
+{Michael Feathers}, \ul{Working Effectively with Legacy Code}\\[3pt]
+{Martin Fowler}, \ul{Refactoring: Improving the Design of Existing Code}\\[3pt]
+{Erich Gamma et al.}, \ul{Design Patterns: Elements of Reusable Object-Oriented Software}\\[3pt]
+{Martin Fowler}, \ul{UML Distilled}\\[3pt]
+{\nospell{Anneke Kleppe} et al.}, \ul{MDA Explained: The Model Driven Architecture: Practice and Promise}\\[3pt]
+{\nospell{Jez Humble} et al.}, \ul{Continuous Delivery: Reliable Software Releases through Build, Test, and Deployment Automation}\\[3pt]
+{\nospell{Michael T. Nygard}}, \ul{Release It!: Design and Deploy Production-Ready Software}\\[3pt]
 \end{multicols}
 
 \end{document}
